Refactor `MongoManager` for improved null safety and add extensive features to `MaintenanceCMD`, including command enhancements, player management, and custom error handling